[package]
name = "ferr_os"
version = "0.2.0"
edition = "2018"

[dependencies]
bootloader = "0.9" # bootloader Rust crate

# profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for 'cargo release'
[profile.release]
panic = "abort" # disable stack unwinding on panic
