[package]
name = "ferr_os"
version = "0.0.1"
edition = "2018"

[dependencies]
bootloader = "0.9" # bootloader Rust crate
volatile = "0.2.6" # tells compiler to not optimize writes away
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] } # provides macro that defs lazy static, inits when accessed for first time

# profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for 'cargo release'
[profile.release]
panic = "abort" # disable stack unwinding on panic
